@@ -84,11 +84,13 @@ Collate:
     'count_method.R'
     'tempcorpus.R'
     'cpos_method.R'
+    'decode_method.R'
     'hits_class.R'
     'dispersion_method.R'
     'dispersion_methods.R'
     'divide_method.R'
     'dotplot_method.R'
+    'encode_method.R'
     'encoding_method.R'
     'enrich_method.R'
     'freq_method.R'
